feat: ollama client